feat: Introduce Liquibase for database migration\n\n- Add Liquibase dependency to pom.xml.\n- Configure Liquibase in application.yml.\n- Migrate existing schema.sql and data.sql to Liquibase changelog format.\n- Update Spring Boot version in documentation from 3.2.x to 3.5.x.

--- a/基本設計書.md
+++ b/基本設計書.md
@@ -21,7 +21,7 @@
 ### 3. 環境構成
 
 *   **開発言語**: Java 17+
-*   **フレームワーク**: Spring Boot 3.2.x
+*   **フレームワーク**: Spring Boot 3.5.x
 *   **認可サーバーライブラリ**: Spring Authorization Server 1.2.x
 *   **データベース**: PostgreSQL 14+
 *   **コンテナオーケストレーション**: Docker Swarm
@@ -114,6 +114,8 @@ graph LR
     *   `OAuth2AuthorizationConsentService`: `JdbcOAuth2AuthorizationConsentService` を利用し、PostgreSQLにユーザー同意情報を永続化。
     *   `JWKSource`: RSA鍵ペアをメモリ上で生成（本番ではKMS/HSM連携を検討）。公開鍵を `/oauth2/jwks` で公開。
     *   `JwtEncoder`: `NimbusJwsEncoder` を利用し、JWTを生成。
+    *   `OAuth2TokenCustomizer`: JWTアクセストークンに `authorities` などのカスタムクレームを追加するために使用。
+    *   `JwtAuthenticationConverter`: リソースサーバーがJWTのクレーム（特に `authorities`）を解釈し、Spring Securityの権限 (`GrantedAuthority`) にマッピングするために使用。
     *   `AuthorizationServerSettings`: 発行者URI (`issuer`) などを設定。
     *   `HttpSessionIdResolver`: `CookieHttpSessionIdResolver` (デフォルト) を使用し、セッションIDをCookieで管理。
     *   `AuthenticationController`: SPAからの直接認証API (`/api/login`) を提供。
@@ -164,6 +166,7 @@ graph LR
     *   `client_authentication_methods` (VARCHAR(1000) NOT NULL) - **クライアント認証方式**
     *   `authorization_grant_types` (VARCHAR(1000) NOT NULL) - **認可グラントタイプ**
     *   `redirect_uris` (VARCHAR(1000) NULL) - **リダイレクトURI群**
+    *   `post_logout_redirect_uris` (VARCHAR(1000) NULL) - **ログアウト後のリダイレクトURI群**
     *   `scopes` (VARCHAR(1000) NOT NULL) - **許可スコープ群**
     *   `client_settings` (VARCHAR(2000) NOT NULL) - **クライアント設定 (JSON形式)**
     *   `token_settings` (VARCHAR(2000) NOT NULL) - **トークン設定 (JSON形式)**
@@ -173,35 +176,35 @@ graph LR
     *   `principal_name` (VARCHAR(200) NOT NULL) - **プリンシパル名 (ユーザー名)**
     *   `authorization_grant_type` (VARCHAR(100) NOT NULL) - **認可グラントタイプ**
     *   `authorized_scopes` (VARCHAR(1000) NULL) - **認可済みスコープ群**
-    *   `attributes` (VARCHAR(4000) NULL) - **属性情報 (JSON形式)**
+    *   `attributes` (TEXT NULL) - **属性情報 (JSON形式)**
     *   `state` (VARCHAR(500) NULL) - **状態 (CSRFトークンなど)**
-    *   `authorization_code_value` (VARCHAR(4000) NULL) - **認可コード値**
+    *   `authorization_code_value` (TEXT NULL) - **認可コード値**
     *   `authorization_code_issued_at` (TIMESTAMP NULL) - **認可コード発行日時**
     *   `authorization_code_expires_at` (TIMESTAMP NULL) - **認可コード有効期限**
-    *   `authorization_code_metadata` (VARCHAR(2000) NULL) - **認可コードメタデータ (JSON形式)**
-    *   `access_token_value` (VARCHAR(4000) NULL) - **アクセストークン値**
+    *   `authorization_code_metadata` (TEXT NULL) - **認可コードメタデータ (JSON形式)**
+    *   `access_token_value` (TEXT NULL) - **アクセストークン値**
     *   `access_token_issued_at` (TIMESTAMP NULL) - **アクセストークン発行日時**
     *   `access_token_expires_at` (TIMESTAMP NULL) - **アクセストークン有効期限**
-    *   `access_token_metadata` (VARCHAR(2000) NULL) - **アクセストークンメタデータ (JSON形式)**
+    *   `access_token_metadata` (TEXT NULL) - **アクセストークンメタデータ (JSON形式)**
     *   `access_token_type` (VARCHAR(100) NULL) - **アクセストークンタイプ (例: Bearer)**
     *   `access_token_scopes` (VARCHAR(1000) NULL) - **アクセストークンのスコープ群**
-    *   `oidc_id_token_value` (VARCHAR(4000) NULL) - **OIDC IDトークン値**
+    *   `oidc_id_token_value` (TEXT NULL) - **OIDC IDトークン値**
     *   `oidc_id_token_issued_at` (TIMESTAMP NULL) - **OIDC IDトークン発行日時**
     *   `oidc_id_token_expires_at` (TIMESTAMP NULL) - **OIDC IDトークン有効期限**
-    *   `oidc_id_token_metadata` (VARCHAR(2000) NULL) - **OIDC IDトークンメタデータ (JSON形式)**
-    *   `oidc_id_token_claims` (VARCHAR(2000) NULL) - **OIDC IDトークンクレーム (JSON形式)**
-    *   `refresh_token_value` (VARCHAR(4000) NULL) - **リフレッシュトークン値**
+    *   `oidc_id_token_metadata` (TEXT NULL) - **OIDC IDトークンメタデータ (JSON形式)**
+    *   `oidc_id_token_claims` (TEXT NULL) - **OIDC IDトークンクレーム (JSON形式)**
+    *   `refresh_token_value` (TEXT NULL) - **リフレッシュトークン値**
     *   `refresh_token_issued_at` (TIMESTAMP NULL) - **リフレッシュトークン発行日時**
     *   `refresh_token_expires_at` (TIMESTAMP NULL) - **リフレッシュトークン有効期限**
-    *   `refresh_token_metadata` (VARCHAR(2000) NULL) - **リフレッシュトークンメタデータ (JSON形式)**
-    *   `user_code_value` (VARCHAR(4000) DEFAULT NULL) - **ユーザーコード値 (デバイスコードフロー用)**
+    *   `refresh_token_metadata` (TEXT NULL) - **リフレッシュトークンメタデータ (JSON形式)**
+    *   `user_code_value` (TEXT DEFAULT NULL) - **ユーザーコード値 (デバイスコードフロー用)**
     *   `user_code_issued_at` (TIMESTAMP DEFAULT NULL) - **ユーザーコード発行日時**
     *   `user_code_expires_at` (TIMESTAMP DEFAULT NULL) - **ユーザーコード有効期限**
-    *   `user_code_metadata` (VARCHAR(2000) DEFAULT NULL) - **ユーザーコードメタデータ**
-    *   `device_code_value` (VARCHAR(4000) DEFAULT NULL) - **デバイスコード値 (デバイスコードフロー用)**
+    *   `user_code_metadata` (TEXT DEFAULT NULL) - **ユーザーコードメタデータ**
+    *   `device_code_value` (TEXT DEFAULT NULL) - **デバイスコード値 (デバイスコードフロー用)**
     *   `device_code_issued_at` (TIMESTAMP DEFAULT NULL) - **デバイスコード発行日時**
     *   `device_code_expires_at` (TIMESTAMP DEFAULT NULL) - **デバイスコード有効期限**
-    *   `device_code_metadata` (VARCHAR(2000) DEFAULT NULL) - **デバイスコードメタデータ**
+    *   `device_code_metadata` (TEXT DEFAULT NULL) - **デバイスコードメタデータ**
 *   **t_oauth2_authorization_consent** (テーブル名: `t_oauth2_authorization_consent`) - **認可同意情報**
     *   `registered_client_id` (VARCHAR(100) NOT NULL) - **登録済みクライアントID**
     *   `principal_name` (VARCHAR(200) NOT NULL) - **プリンシパル名 (ユーザー名)**
@@ -212,7 +215,7 @@ graph LR
     *   `SESSION_ID` (CHAR(36) NOT NULL UNIQUE) - **セッションID**
     *   `CREATION_TIME` (BIGINT NOT NULL) - **作成日時**
     *   `LAST_ACCESS_TIME` (BIGINT NOT NULL) - **最終アクセス日時**
-    *   `MAX_INACTIVE_INTERVAL_SECONDS` (INT NOT NULL) - **最大非アクティブ期間 (秒)**
+    *   `MAX_INACTIVE_INTERVAL` (INT NOT NULL) - **最大非アクティブ期間 (秒)**
     *   `EXPIRY_TIME` (BIGINT NOT NULL) - **有効期限**
     *   `PRINCIPAL_NAME` (VARCHAR(100) NULL) - **プリンシパル名**
 *   **t_spring_session_attributes** (テーブル名: `t_spring_session_attributes`) - **HTTPセッション属性**
