--- a/構築手順.md
+++ b/構築手順.md
@@ -46,7 +46,7 @@
 1.  **Spring Initializr** ([https://start.spring.io/](https://start.spring.io/)) を使用して、以下の設定でプロジェクトを作成します。
     *   **Project**: Maven
     *   **Language**: Java
-    *   **Spring Boot**: 3.2.x
+    *   **Spring Boot**: 3.5.x (またはそれ以降)
     *   **Project Metadata**:
         *   Group: `com.example`
         *   Artifact: `internal-authz-server`
@@ -185,6 +185,7 @@
         client_authentication_methods varchar(1000) NOT NULL,
         authorization_grant_types varchar(1000) NOT NULL,
         redirect_uris varchar(1000) DEFAULT NULL,
+        post_logout_redirect_uris varchar(1000) DEFAULT NULL,
         scopes varchar(1000) NOT NULL,
         client_settings varchar(2000) NOT NULL,
         token_settings varchar(2000) NOT NULL,
@@ -244,7 +245,7 @@
         SESSION_ID CHAR(36) NOT NULL,
         CREATION_TIME BIGINT NOT NULL,
         LAST_ACCESS_TIME BIGINT NOT NULL,
-        MAX_INACTIVE_INTERVAL_SECONDS INT NOT NULL,
+        MAX_INACTIVE_INTERVAL INT NOT NULL,
         EXPIRY_TIME BIGINT NOT NULL,
         PRINCIPAL_NAME VARCHAR(100),
         CONSTRAINT T_SPRING_SESSION_PK PRIMARY KEY (PRIMARY_ID)
@@ -262,6 +263,86 @@
         CONSTRAINT T_SPRING_SESSION_ATTRIBUTES_PK PRIMARY KEY (SESSION_PRIMARY_ID, ATTRIBUTE_NAME),
         CONSTRAINT T_SPRING_SESSION_ATTRIBUTES_FK FOREIGN KEY (SESSION_PRIMARY_ID) REFERENCES t_spring_session(PRIMARY_ID) ON DELETE CASCADE
     );
+
+    -- Column Comments
+
+    COMMENT ON TABLE t_users IS 'ユーザー情報';
+    COMMENT ON COLUMN t_users.username IS 'ユーザー名';
+    COMMENT ON COLUMN t_users.password IS 'パスワード (BCryptハッシュ)';
+    COMMENT ON COLUMN t_users.enabled IS '有効フラグ';
+
+    COMMENT ON TABLE t_authorities IS 'ユーザー権限';
+    COMMENT ON COLUMN t_authorities.username IS 'ユーザー名';
+    COMMENT ON COLUMN t_authorities.authority IS '権限名 (ロール)';
+
+    COMMENT ON TABLE oauth2_registered_client IS '登録済みクライアント情報';
+    COMMENT ON COLUMN oauth2_registered_client.id IS 'クライアント内部ID';
+    COMMENT ON COLUMN oauth2_registered_client.client_id IS 'クライアントID';
+    COMMENT ON COLUMN oauth2_registered_client.client_id_issued_at IS 'クライアントID発行日時';
+    COMMENT ON COLUMN oauth2_registered_client.client_secret IS 'クライアントシークレット (BCryptハッシュ)';
+    COMMENT ON COLUMN oauth2_registered_client.client_secret_expires_at IS 'クライアントシークレット有効期限';
+    COMMENT ON COLUMN oauth2_registered_client.client_name IS 'クライアント名';
+    COMMENT ON COLUMN oauth2_registered_client.client_authentication_methods IS 'クライアント認証方式';
+    COMMENT ON COLUMN oauth2_registered_client.authorization_grant_types IS '認可グラントタイプ';
+    COMMENT ON COLUMN oauth2_registered_client.redirect_uris IS 'リダイレクトURI群';
+    COMMENT ON COLUMN oauth2_registered_client.post_logout_redirect_uris IS 'ログアウト後のリダイレクトURI群';
+    COMMENT ON COLUMN oauth2_registered_client.scopes IS '許可スコープ群';
+    COMMENT ON COLUMN oauth2_registered_client.client_settings IS 'クライアント設定 (JSON形式)';
+    COMMENT ON COLUMN oauth2_registered_client.token_settings IS 'トークン設定 (JSON形式)';
+
+    COMMENT ON TABLE oauth2_authorization IS '認可状態情報';
+    COMMENT ON COLUMN oauth2_authorization.id IS '認可状態ID';
+    COMMENT ON COLUMN oauth2_authorization.registered_client_id IS '登録済みクライアントID';
+    COMMENT ON COLUMN oauth2_authorization.principal_name IS 'プリンシパル名 (ユーザー名)';
+    COMMENT ON COLUMN oauth2_authorization.authorization_grant_type IS '認可グラントタイプ';
+    COMMENT ON COLUMN oauth2_authorization.authorized_scopes IS '認可済みスコープ群';
+    COMMENT ON COLUMN oauth2_authorization.attributes IS '属性情報 (JSON形式)';
+    COMMENT ON COLUMN oauth2_authorization.state IS '状態 (CSRFトークンなど)';
+    COMMENT ON COLUMN oauth2_authorization.authorization_code_value IS '認可コード値';
+    COMMENT ON COLUMN oauth2_authorization.authorization_code_issued_at IS '認可コード発行日時';
+    COMMENT ON COLUMN oauth2_authorization.authorization_code_expires_at IS '認可コード有効期限';
+    COMMENT ON COLUMN oauth2_authorization.authorization_code_metadata IS '認可コードメタデータ (JSON形式)';
+    COMMENT ON COLUMN oauth2_authorization.access_token_value IS 'アクセストークン値';
+    COMMENT ON COLUMN oauth2_authorization.access_token_issued_at IS 'アクセストークン発行日時';
+    COMMENT ON COLUMN oauth2_authorization.access_token_expires_at IS 'アクセストークン有効期限';
+    COMMENT ON COLUMN oauth2_authorization.access_token_metadata IS 'アクセストークンメタデータ (JSON形式)';
+    COMMENT ON COLUMN oauth2_authorization.access_token_type IS 'アクセストークンタイプ (例: Bearer)';
+    COMMENT ON COLUMN oauth2_authorization.access_token_scopes IS 'アクセストークンのスコープ群';
+    COMMENT ON COLUMN oauth2_authorization.oidc_id_token_value IS 'OIDC IDトークン値';
+    COMMENT ON COLUMN oauth2_authorization.oidc_id_token_issued_at IS 'OIDC IDトークン発行日時';
+    COMMENT ON COLUMN oauth2_authorization.oidc_id_token_expires_at IS 'OIDC IDトークン有効期限';
+    COMMENT ON COLUMN oauth2_authorization.oidc_id_token_metadata IS 'OIDC IDトークンメタデータ (JSON形式)';
+    COMMENT ON COLUMN oauth2_authorization.refresh_token_value IS 'リフレッシュトークン値';
+    COMMENT ON COLUMN oauth2_authorization.refresh_token_issued_at IS 'リフレッシュトークン発行日時';
+    COMMENT ON COLUMN oauth2_authorization.refresh_token_expires_at IS 'リフレッシュトークン有効期限';
+    COMMENT ON COLUMN oauth2_authorization.refresh_token_metadata IS 'リフレッシュトークンメタデータ (JSON形式)';
+    COMMENT ON COLUMN oauth2_authorization.user_code_value IS 'ユーザーコード値 (デバイスコードフロー用)';
+    COMMENT ON COLUMN oauth2_authorization.user_code_issued_at IS 'ユーザーコード発行日時';
+    COMMENT ON COLUMN oauth2_authorization.user_code_expires_at IS 'ユーザーコード有効期限';
+    COMMENT ON COLUMN oauth2_authorization.user_code_metadata IS 'ユーザーコードメタデータ';
+    COMMENT ON COLUMN oauth2_authorization.device_code_value IS 'デバイスコード値 (デバイスコードフロー用)';
+    COMMENT ON COLUMN oauth2_authorization.device_code_issued_at IS 'デバイスコード発行日時';
+    COMMENT ON COLUMN oauth2_authorization.device_code_expires_at IS 'デバイスコード有効期限';
+    COMMENT ON COLUMN oauth2_authorization.device_code_metadata IS 'デバイスコードメタデータ';
+
+    COMMENT ON TABLE oauth2_authorization_consent IS '認可同意情報';
+    COMMENT ON COLUMN oauth2_authorization_consent.registered_client_id IS '登録済みクライアントID';
+    COMMENT ON COLUMN oauth2_authorization_consent.principal_name IS 'プリンシパル名 (ユーザー名)';
+    COMMENT ON COLUMN oauth2_authorization_consent.authorities IS '認可済み権限群 (スコープ)';
+
+    COMMENT ON TABLE t_spring_session IS 'HTTPセッション情報';
+    COMMENT ON COLUMN t_spring_session.PRIMARY_ID IS 'プライマリーID';
+    COMMENT ON COLUMN t_spring_session.SESSION_ID IS 'セッションID';
+    COMMENT ON COLUMN t_spring_session.CREATION_TIME IS '作成日時';
+    COMMENT ON COLUMN t_spring_session.LAST_ACCESS_TIME IS '最終アクセス日時';
+    COMMENT ON COLUMN t_spring_session.MAX_INACTIVE_INTERVAL IS '最大非アクティブ期間 (秒)';
+    COMMENT ON COLUMN t_spring_session.EXPIRY_TIME IS '有効期限';
+    COMMENT ON COLUMN t_spring_session.PRINCIPAL_NAME IS 'プリンシパル名';
+
+    COMMENT ON TABLE t_spring_session_attributes IS 'HTTPセッション属性';
+    COMMENT ON COLUMN t_spring_session_attributes.SESSION_PRIMARY_ID IS 'セッションプライマリーID';
+    COMMENT ON COLUMN t_spring_session_attributes.ATTRIBUTE_NAME IS '属性名';
+    COMMENT ON COLUMN t_spring_session_attributes.ATTRIBUTE_BYTES IS '属性値 (バイト配列)';
     ```
 
 3.  ターミナルで以下のコマンドを実行し、PostgreSQLコンテナを起動します。
@@ -292,10 +373,10 @@ spring:
     password: securepassword
     driver-class-name: org.postgresql.Driver
   # データベーステーブルを自動で初期化する
-  # 初回起動時のみ true にし、以降は false または validate に変更する
+  # 初回起動時は 'always' に設定し、一度初期化が完了した後は 'never' に変更してください。
   sql:
     init:
-      mode: always
+      mode: never
   jpa:
     hibernate:
       ddl-auto: none # Spring JDBC を使うため none に設定
@@ -436,9 +517,9 @@ management:
             return http.build();
         }
 
-        // (2) ユーザー認証用 (ログインページなど) の SecurityFilterChain
+        // (3) ユーザー認証用 (ログインページなど) の SecurityFilterChain
         @Bean
-        @Order(2)
+        @Order(3)
         public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
             http
                 .authorizeHttpRequests(authorize -> authorize
@@ -452,9 +533,9 @@ management:
             return http.build();
         }
 
-        // (3) Admin API とリソースサーバー機能用の SecurityFilterChain
+        // (2) Admin API とリソースサーバー機能用の SecurityFilterChain
         @Bean
-        @Order(3)
+        @Order(2)
         public SecurityFilterChain apiSecurityFilterChain(HttpSecurity http) throws Exception {
             http
                 .securityMatcher("/api/**", "/messages")
@@ -464,7 +545,11 @@ management:
                     .requestMatchers("/messages").hasAuthority("SCOPE_message.read")
                     .anyRequest().authenticated()
                 )
-                .oauth2ResourceServer(resourceServer -> resourceServer.jwt(Customizer.withDefaults()))
+                .oauth2ResourceServer(oauth2 -> oauth2
+                    .jwt(jwt -> jwt
+                        .jwtAuthenticationConverter(jwtAuthenticationConverter())
+                    )
+                )
                 // CSRFはステートレスなAPIでは不要な場合があるが、ここでは有効にしておく
                 .csrf(csrf -> csrf.ignoringRequestMatchers(new AntPathRequestMatcher("/api/**")));
             return http.build();
@@ -550,6 +635,36 @@ management:
             return OAuth2AuthorizationServerConfiguration.jwtDecoder(jwkSource);
         }
 
+        // --- トークンカスタマイズ ---
+
+        @Bean
+        public OAuth2TokenCustomizer<JwtEncodingContext> jwtTokenCustomizer() {
+            return (context) -> {
+                if (OAuth2TokenType.ACCESS_TOKEN.equals(context.getTokenType())) {
+                    Authentication principal = context.getPrincipal();
+                    Set<String> authorities = principal.getAuthorities().stream()
+                            .map(GrantedAuthority::getAuthority)
+                            .collect(Collectors.toSet());
+                    context.getClaims().claim("authorities", authorities);
+                }
+            };
+        }
+
+        // --- トークンカスタマイズ ---
+
+        @Bean
+        public OAuth2TokenCustomizer<JwtEncodingContext> jwtTokenCustomizer() {
+            return (context) -> {
+                if (OAuth2TokenType.ACCESS_TOKEN.equals(context.getTokenType())) {
+                    Authentication principal = context.getPrincipal();
+                    Set<String> authorities = principal.getAuthorities().stream()
+                            .map(GrantedAuthority::getAuthority)
+                            .collect(Collectors.toSet());
+                    context.getClaims().claim("authorities", authorities);
+                }
+            };
+        }
+
         // --- 認可サーバー設定 ---
         @Bean
         public AuthorizationServerSettings authorizationServerSettings() {
@@ -625,9 +740,10 @@ VALUES (
     'none',
     'refresh_token,authorization_code',
     'http://127.0.0.1:3000/callback',
+    'http://127.0.0.1:3000/logout',
     'openid,profile,message.read',
     '{"@class":"java.util.Collections$UnmodifiableMap","settings.client.require-proof-key":true,"settings.client.require-authorization-consent":true}',
-    '{"@class":"java.util.Collections$UnmodifiableMap","settings.token.access-token-format":{"@class":"org.springframework.security.oauth2.server.authorization.settings.OAuth2TokenFormat","value":"self-contained"},"settings.token.access-token-time-to-live":["java.time.Duration",300.000000000],"settings.token.refresh-token-time-to-live":["java.time.Duration",3600.000000000],"settings.token.reuse-refresh-tokens":true}'
+    '{"@class":"java.util.Collections$UnmodifiableMap","settings.token.access-token-format":{"@class":"org.springframework.security.oauth2.server.authorization.settings.OAuth2TokenFormat","value":"self-contained"},"settings.token.access-token-time-to-live":["java.time.Duration",300],"settings.token.refresh-token-time-to-live":["java.time.Duration",3600],"settings.token.reuse-refresh-tokens":true,"settings.token.authorization-code-time-to-live":["java.time.Duration",300]}'
 )
 ON CONFLICT (id) DO NOTHING;
 ```
@@ -713,22 +829,23 @@ ON CONFLICT (id) DO NOTHING;
 
         @GetMapping("/users/{username}")
         public ResponseEntity<UserResponse> getUser(@PathVariable String username) {
-            if (!userDetailsManager.userExists(username)) {
+            try {
+                UserDetails user = userDetailsManager.loadUserByUsername(username);
+                List<String> roles = user.getAuthorities().stream()
+                        .map(GrantedAuthority::getAuthority)
+                        .collect(Collectors.toList());
+                UserResponse response = new UserResponse(user.getUsername(), user.isEnabled(), roles);
+                return ResponseEntity.ok(response);
+            } catch (org.springframework.security.core.userdetails.UsernameNotFoundException e) {
                 return ResponseEntity.notFound().build();
             }
-            UserDetails user = userDetailsManager.loadUserByUsername(username);
-            List<String> roles = user.getAuthorities().stream()
-                    .map(GrantedAuthority::getAuthority)
-                    .collect(Collectors.toList());
-            UserResponse response = new UserResponse(user.getUsername(), user.isEnabled(), roles);
-            return ResponseEntity.ok(response);
         }
 
         // POST, PUT, DELETE の実装は省略
     }
     ```
 
-    **(注意)** `AdminController` は `UserDetailsManager` をインジェクトして使用しています。`UserDetailsManager` はSpring Securityが提供するインターフェースで、`JdbcUserDetailsManager`はその実装クラスです。`SecurityConfig`でBean定義しているため、DIコンテナから注入できます。クライアント管理APIも同様に `RegisteredClientRepository` を使って実装できます。
+    (注意) `AdminController` は `UserDetailsManager` をインジェクトして使用しています。`UserDetailsManager` はSpring Securityが提供するインターフェースで、`JdbcUserDetailsManager`はその実装クラスです。`SecurityConfig`でBean定義しているため、DIコンテナから注入できます。クライアント管理APIも同様に `RegisteredClientRepository` を使って実装できます。
 
 ## ステップ7: Docker化とデプロイ
 
@@ -772,7 +889,7 @@ ON CONFLICT (id) DO NOTHING;
           - authz-net
 
       postgresql:
-        image: postgres:14-alpine
+        image: postgres:16-alpine
         container_name: authz-postgres
         # コンテナ外部にポートを公開する必要がなければ ports は削除
         ports:
